testsuite/poke.pkl/for-diag-2.pk
/* { dg-do compile } */

for (a in
    23#B /* { dg-error "invalid container.*\n.*expected array or string" } */
    )
{
}
